Database Setup & Connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.application.name=learn-springboot
+spring.datasource.url=jdbc:postgresql://localhost:5332/users
+spring.datasource.username=kenil13
+spring.datasource.password=qwertz
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+#----> This line will destroy the schema everytime when we run application
+spring.jpa.hibernate.ddl-auto= create-drop
+
+#----> This line will show the schema in the logcat
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
