--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     container_name: postgres
     image: postgres:latest
     environment:
-      POSTGRES_USER: amigoscode
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: kenil13
+      POSTGRES_PASSWORD: qwertz
       PGDATA: /data/postgres
     volumes:
       - db:/data/postgres
